syntax = "proto3";

package bananas.tasks;

option go_package = "github.com/muaviaUsmani/bananas/proto/gen;tasks";

import "google/protobuf/timestamp.proto";

// GenericTask represents a flexible task with key-value data
message GenericTask {
  string task_id = 1;
  string task_type = 2;
  map<string, string> data = 3;
  google.protobuf.Timestamp created_at = 4;
  int32 priority = 5;
  repeated string tags = 6;
}

// EmailTask represents a task to send an email
message EmailTask {
  string to = 1;
  repeated string cc = 2;
  repeated string bcc = 3;
  string from = 4;
  string subject = 5;
  string body_text = 6;
  string body_html = 7;
  repeated Attachment attachments = 8;
  map<string, string> headers = 9;
  google.protobuf.Timestamp scheduled_for = 10;
}

// Attachment represents an email attachment
message Attachment {
  string filename = 1;
  string content_type = 2;
  bytes data = 3;
  int64 size = 4;
}

// WebhookTask represents a task to call a webhook
message WebhookTask {
  string url = 1;
  string method = 2;  // GET, POST, PUT, DELETE, PATCH
  map<string, string> headers = 3;
  bytes payload = 4;
  int32 timeout_seconds = 5;
  int32 max_retries = 6;
  bool verify_ssl = 7;
  google.protobuf.Timestamp created_at = 8;
}

// DataProcessingTask represents a task to process data
message DataProcessingTask {
  string operation = 1;  // transform, aggregate, filter, etc.
  bytes input_data = 2;
  map<string, string> parameters = 3;
  string output_format = 4;  // json, csv, xml, etc.
  google.protobuf.Timestamp created_at = 5;
  ProcessingOptions options = 6;
}

// ProcessingOptions contains configuration for data processing
message ProcessingOptions {
  int32 batch_size = 1;
  bool parallel = 2;
  int32 max_workers = 3;
  int32 timeout_seconds = 4;
  bool validate_output = 5;
}

// NotificationTask represents a task to send a notification
message NotificationTask {
  string recipient_id = 1;
  string channel = 2;  // email, sms, push, slack, etc.
  string title = 3;
  string message = 4;
  map<string, string> metadata = 5;
  NotificationPriority priority = 6;
  google.protobuf.Timestamp created_at = 7;
}

// NotificationPriority enum for notification urgency
enum NotificationPriority {
  NOTIFICATION_PRIORITY_UNSPECIFIED = 0;
  NOTIFICATION_PRIORITY_LOW = 1;
  NOTIFICATION_PRIORITY_NORMAL = 2;
  NOTIFICATION_PRIORITY_HIGH = 3;
  NOTIFICATION_PRIORITY_URGENT = 4;
}

// BatchTask represents a task to process multiple items in batch
message BatchTask {
  string batch_id = 1;
  repeated BatchItem items = 2;
  string operation = 3;
  int32 concurrency = 4;
  google.protobuf.Timestamp created_at = 5;
  BatchOptions options = 6;
}

// BatchItem represents a single item in a batch
message BatchItem {
  string item_id = 1;
  bytes data = 2;
  map<string, string> metadata = 3;
}

// BatchOptions contains configuration for batch processing
message BatchOptions {
  bool stop_on_error = 1;
  bool return_results = 2;
  int32 timeout_seconds = 3;
  string result_format = 4;
}

// TaskResult represents the result of task execution
message TaskResult {
  string task_id = 1;
  bool success = 2;
  string error_message = 3;
  bytes output = 4;
  google.protobuf.Timestamp completed_at = 5;
  int64 duration_ms = 6;
  map<string, string> metrics = 7;
}

// ScheduledTask represents a task to be executed at a future time
message ScheduledTask {
  string task_id = 1;
  google.protobuf.Timestamp scheduled_for = 2;
  string cron_expression = 3;  // Optional: for recurring tasks
  bytes task_payload = 4;
  string task_type = 5;
  bool recurring = 6;
  google.protobuf.Timestamp created_at = 7;
}

// TaskMetadata contains metadata about any task
message TaskMetadata {
  string task_id = 1;
  string task_name = 2;
  string task_type = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  int32 attempts = 6;
  int32 max_retries = 7;
  string status = 8;
  map<string, string> labels = 9;
}
